# FFMPEG-Android

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/android/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/ffmpeg/: MainActivity.kt  VideoHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/android/ffmpeg/: ExampleUnitTest.kt
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/com/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c  lib-ffmpeg.cpp
ffmpeg/src/main/cpp/libavcodec/: libavcodec.pc  v4l2_buffers.d  v4l2_context.d  v4l2_fmt.d  v4l2_m2m.d  v4l2_m2m_dec.d  v4l2_m2m_enc.d
ffmpeg/src/main/cpp/libavdevice/: libavdevice.pc  libavdevice.so.57
ffmpeg/src/main/cpp/libavfilter/: libavfilter.pc
ffmpeg/src/main/cpp/libavformat/: libavformat.pc
ffmpeg/src/main/cpp/libavutil/: libavutil.pc  libavutil.so.55
ffmpeg/src/main/cpp/libswresample/: libswresample.pc  libswresample.so.2
ffmpeg/src/main/cpp/libswscale/: libswscale.pc  libswscale.so.4
ffmpeg/src/main/java/com/ffmpeg/: FFmpegCmd.kt
ffmpeg/src/test/java/com/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
